--- a/src/tool/N3CE/N3CE.vcxproj.filters
+++ b/src/tool/N3CE/N3CE.vcxproj.filters
@@ -183,6 +183,9 @@
     <ClCompile Include="..\..\engine\N3Base\WaveFile.cpp">
       <Filter>N3Base</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\engine\N3Base\N3Log.cpp">
+      <Filter>N3Base</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="N3CE.rc">
@@ -368,6 +371,9 @@
       <Filter>N3Base</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\N3Base\WaveFile.h">
+      <Filter>N3Base</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\engine\N3Base\N3Log.h">
       <Filter>N3Base</Filter>
     </ClInclude>
   </ItemGroup>
