--- a/src/game/KnightOnLine.vcxproj
+++ b/src/game/KnightOnLine.vcxproj
@@ -276,6 +276,7 @@
     <ClInclude Include="UIDead.h" />
     <ClInclude Include="UIDroppedItemDlg.h" />
     <ClInclude Include="UIEndingDisplay.h" />
+    <ClInclude Include="UIExitMenu.h" />
     <ClInclude Include="UIHelp.h" />
     <ClInclude Include="UIHotKeyDlg.h" />
     <ClInclude Include="UIImageTooltipDlg.h" />
@@ -455,6 +456,7 @@
     <ClCompile Include="UIDead.cpp" />
     <ClCompile Include="UIDroppedItemDlg.cpp" />
     <ClCompile Include="UIEndingDisplay.cpp" />
+    <ClCompile Include="UIExitMenu.cpp" />
     <ClCompile Include="UIHelp.cpp" />
     <ClCompile Include="UIHotKeyDlg.cpp" />
     <ClCompile Include="UIImageTooltipDlg.cpp" />
