--- a/src/game/KnightOnLine.vcxproj.filters
+++ b/src/game/KnightOnLine.vcxproj.filters
@@ -633,6 +633,12 @@
     <ClInclude Include="UIExitMenu.h">
       <Filter>Procedure - Main\UI</Filter>
     </ClInclude>
+    <ClInclude Include="UICmdEdit.h">
+      <Filter>Procedure - Main\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="UICmdList.h">
+      <Filter>Procedure - Main\UI</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Resource.rc">
@@ -1130,6 +1136,12 @@
       <Filter>N3Base\Core</Filter>
     </ClCompile>
     <ClCompile Include="UIExitMenu.cpp">
+      <Filter>Procedure - Main\UI</Filter>
+    </ClCompile>
+    <ClCompile Include="UICmdList.cpp">
+      <Filter>Procedure - Main\UI</Filter>
+    </ClCompile>
+    <ClCompile Include="UICmdEdit.cpp">
       <Filter>Procedure - Main\UI</Filter>
     </ClCompile>
   </ItemGroup>
